manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "testingclusteraks-82f2"
    labels:
        app: "testingclusteraks-82f2"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "testingclusteraks-82f2"
